# evently

./: .env.example  .gitignore  .prettierignore  README.md  changelog.md  jsrepo.json  justfile  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
electron-app/: .gitignore  .prettierignore  README.md  electron-builder.yml  electron.vite.config.ts  package.json
electron-app/db/pb_migrations/: 1738981168_initial_user.js  1739856548_created_notes.js  1739857579_created_events.js  1739857595_created_participants.js  1739857606_created_attendance_records.js  1739857713_created_qr_codes.js  1739857869_updated_participants.js  1739857931_updated_events.js  1739858809_updated_attendance_records.js  1739858938_created_event_schedules.js  1739859298_updated_event_schedules.js  1739864803_updated_qr_codes.js  1739864817_updated_qr_codes.js
electron-app/src/main/: index.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/components/: app-navbar.svelte  nav-user.svelte  navbar-time.svelte  new-app-ver-alert.svelte
src/lib/constants/: index.ts
src/lib/db/: index.ts
src/lib/schema/: event.ts  participant.ts
src/lib/types/: pb-types.ts
src/lib/utils/: index.ts
src/lib/workers/: generate-qr-codes.worker.ts  (+2 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
svelte-app/: .env.example  README.md  package.json  svelte.config.js
svelte-app/src/: app.css  app.html
(+347 files in other folders)
