[package]
name = "Evently"
version = "0.1.1"
description = "A desktop application built with Svelte and Tauri for managing events and tracking attendee attendance through QR code scanning. "
authors = ["Alessandro Benig", "Peter John Arao"]
license = ""
edition = "2021"
rust-version = "1.77.2"
repository = "https://github.com/pitzzahh/evently"
categories = ["utility", "productivity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = ['webview-data-url'] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
dotenvs = "0.1.0"
tauri-plugin-shell = "2"
dirs = "6.0.0"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
